Release 0.1.8
- Add PDF::OCG (OptionalContentGroups) and PDF::OCMD 
Release 0.1.7
- Adjust t/helloworld.t and t/pdf-xobject-form.t for PDF::Content 0.2.2
Release 0.1.6
- Added PDF::StructTreeRoot, PDF::NameTree
- Altered composition of PDF::Mask
- Fixed DeviceN Color load warnings
Release 0.1.5
Improvements from field testing of pdf-checker.p6:
- PDF::Outline, PDF::Outlines:
  -- fix coercements. Convert from classes to roles as /Type is optional.
  -- Allow negative /Count values, as per spec
- PDF::Destination: allow trailing optional array elements to be omitted
- PDF::ColorSpace::Pattern: added as a new colorspace type
- PDF::Font:
  -- fix coercement of type1 & 3 Encoding entry
  -- coerce type3 fonts CharProcs as a PDF::Content::Graphics content stream
Release 0.1.4
- Altered composition of some classes to avoid 'version skew' compilation
  errors (Issue #11)
- Fixed PDF::ExtGState.SMask accessor; new subclasses PDF::Mask::Alpha,
  PDF::Mask::Luminosity
- Improvements to pdf-checker.p6
Release 0.1.3
- Fix ToUnicode entry in type 0, 1 and 3 fonts.
Release 0.1.2
added:
- PDF::Action::URI class
- PDF::Destination.construct() method
renamed:
- PDF::Destination.type() method to .fit()
Release 0.1.1
- Renamed role PDF::OutlineItem -> PDF::Outline
- Add PDF::Destination; removed destination handling from PDF::Action; includes:
  -- `construct` method for creating new page destinations
  -- `:Fit` enumeration export for destination fitting modes
Release 0.1.0
- Adjust to latest PDF. PDF::DAO classes have been renamed
  to PDF::COS (Carousel Object System)
Release 0.0.8
- Revamped PDF::Function::Sampled::Calculator
Release 0.0.7
Add PDF::Function calculator and evaluate methods, classes:
- PDF::Function::PostScript
- PDF::Function::Sampled
- PDF::Function::Exponential
- PDF::Function::Stitching
Release 0.0.6
- Fix PDF::Page.Annots accessor. Now coerces fields to PDF::Field
Release 0.0.5
- Set up accessor aliases, e.g. D(dash) in PDF::Appearance
Release 0.0.4