@@ -114,5 +114,5 @@
     "pdf"
   ],
   "test-depends" : [ ],
-  "version" : "0.1.7"
+  "version" : "0.1.8"
 }
