@@ -65,9 +65,9 @@ endobj
 
 5 0 obj <<
   /Type /Pattern
-  /TilingType 2
   /PaintType 1
   /PatternType 1
+  /TilingType 2
   /BBox [ 0 0 100 100 ]
   /Matrix [ 0.4 0 0 0.4 0 0 ]
   /Resources <<
