@@ -1,5 +1,8 @@
 Release 0.1.8
-- Add PDF::OCG (OptionalContentGroups) and PDF::OCMD 
+- Add classess PDF::OCG (Optional Content Groups) and PDF::OCMD (Optional
+  Content Membership Dictionary)
+- Remove some trivial single-use subsets. Replace with 'where' clauses on
+  entry attributes.
 Release 0.1.7
 - Adjust t/helloworld.t and t/pdf-xobject-form.t for PDF::Content 0.2.2
 Release 0.1.6
